@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-30T02:00:22Z",
-  "count_outdated" : 9288,
-  "uniques_outdated" : 4476,
-  "count" : 9346,
-  "uniques" : 4524,
+  "timestamp" : "2025-07-30T12:51:11Z",
+  "count_outdated" : 9290,
+  "uniques_outdated" : 4478,
+  "count" : 9347,
+  "uniques" : 4525,
   "clones" : [
-    {
-      "timestamp": "2025-07-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-07-17T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ],
       "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2025-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
